--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "br.com.alocarioca.eAssinatura"
         minSdkVersion 23
-        targetSdkVersion 28
-        versionCode 9
+        targetSdkVersion 29
+        versionCode 15
         versionName 'B02.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -21,6 +21,7 @@ android {
     }
     productFlavors {
     }
+    buildToolsVersion '29.0.2'
 }
 
 dependencies {
